# hidimstat

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  CONTRIBUTOR.rst  LICENSE  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.py
.binder/: postBuild  requirements.txt  runtime.txt
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  maintenance_issue.yml
.github/workflows/: black.yml  build_docs.yml  build_package.yml  call_black.yml  call_build_docs.yml  call_deploy_on_main.yml  call_get_info.yml  call_lint.yml  call_linter.yml  call_no_test.yml  call_publish_result.yml  call_test_minimal.yml  call_test_moch.yml  call_test_package.yml  call_test_reporter.yml  ci.yml  ci_maintenance.yml  ci_test.yml  circleci-artifact.yml  deploy_ghpages.yml  main_workflow.yml  pull_request_workflow.yml  python-package.yml  test_moch.yml  test_package.yml  test_reporter.yml
build_tools/: CI_documentation.rst  How_to_release.md
build_tools/circle/: build_doc.sh  push_doc.sh  setup_virtual_environment.sh
build_tools/template/: CHANGELOG.rst
doc/: conf.py  doc-requirements.txt  index.rst
doc_conf/: Makefile  api.rst  conf.py  dev  doc-requirements.txt  index.rst  references.bib  utils.py  version.json
doc_conf/_templates/: function.rst
doc_conf/whats_news/: latest.rst  whats_new.rst
docs/: Makefile  api.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docs/_static/: documentation_options.js
docs/_templates/: class.rst
docs/auto_examples/: index.html  plot_2D_simulation_example.html  plot_conditional_vs_marginal_xor_data.html  plot_dcrt_example.html  plot_diabetesFeatures_importance_example.html  plot_diabetes_variable_importance_example.html  plot_fmri_data_example.html  plot_importance_classification_iris.html  plot_knockoff_aggregation.html  plot_model_agnostic_importance.html  plot_pitfalls_permutation_importance.html  plot_residuals_sampling.html  plot_variable_importance_classif.html  sg_execution_times.html
docs/html/: .buildinfo  objects.inv  searchindex.js  sg_execution_times.html
docs/src/: api.rst  concepts.rst  conf.py  dev  glm_methods.rst  glossary_and_notations.rst  grouping.rst  helper_methods.rst  high_dimension.rst  index.rst  marginal_methods.rst  methods_list.rst  model_agnostic_methods.rst  partial_dependence.rst  slm_methods.rst  user_guide.rst  visualization.rst
docs/tools/: conf.py  references.bib  utils.py  version.json
examples/: README.txt  example_API.py  example_knockoffs.py  plot_2D_simulation_example.py  plot_D0CRT_comparison.py  plot_accumulated_local_effects.py  plot_cfi.py  plot_cfi_minimal.py  plot_classification_example.py  plot_comparison_pdp_ale.py  plot_conditional_vs_marginal_xor_data.py  plot_dcrt_example.py  plot_dcrt_logit.py  plot_diabetesFeatures_importance_example.py  plot_diabetes_variable_importance_example.py  plot_diabetes_variable_importance_example_legacy.py  plot_diabetes_variable_importance_example_v2.py  plot_digits.py  plot_dl_diabetes_confidence.py  plot_e_values_aggregation.py  plot_example_knockoffs.py  plot_fmri_data_example.py  plot_importance_classification_iris.py  plot_knockoff_aggregation.py  plot_knockoffs_wisconsin.py  plot_loci.py  plot_loco.py  plot_loco_minimal.py  plot_meg_data_example.py  plot_meg_somato.py  plot_model_agnostic_importance.py  plot_partial_dependence.py  plot_partial_dependence_plot.py  plot_partial_dependency_plot.py  plot_pitfalls_permutation_importance.py  plot_residuals_sampling.py  plot_sage_example.py  plot_variable_importance_classif.py  plot_variable_importance_classif_classes.py  plot_variable_importance_classification.py
examples/_utils/: plot_dataset.py
examples/basic_examples/: README.rst  plot_basic_1_general_pipeline.py  plot_basic_2_individual_vs_group.py  (+2 more)
examples_not_exhibited/: plot_fig_1_nguyen_et_al.py  plot_meg_data_example.py
hidimpy/: pyvenv.cfg
hidimstat/: BBI.py  CPI.py  Dnn_learner.py  Dnn_learner_single.py  LOCO.py  PermutationImportance.py  __init__.py  ada_svr.py  adaptive_permutation_threshold.py  bbi.py  clustered_inference.py  compute_importance.py  cpi.py  dcrt.py  desparsified_lasso.py  ensemble_clustered_inference.py  gaussian_knockoff.py  importance_functions.py  knockoff_aggregation.py  knockoffs.py  loco.py  multi_sample_split.py  noise_std.py  permutation_importance.py  permutation_test.py  scenario.py  standardized_svr.py  stat_coef_diff.py  stat_tools.py  utils.py
spatial_noise/: plot_2D_simulation_example.py
src/: RandomForestModified.py  compute_importance.py  desparsified_lasso.py  noise_std.py  permutation_test.py
test/: conftest.py  test_BBI.py  test_adaptative_permutation_threshold_SVR.py  test_adaptive_permutation_threshold.py  test_base_importance.py  test_base_perturbation.py  test_base_variable_importance.py  test_clustered_inference.py  test_conditional_feature_importance.py  test_conditional_permutation_importance.py  test_conditional_randomization_test.py  test_conditional_sampling.py  test_cpi.py  test_cpi_function.py  test_cross_validation.py  test_data_simulation.py  test_dcrt.py  test_desparsified_lasso.py  test_distilled_conditional_randomization_test.py  test_empirical_thresholding.py  test_ensemble_clustered_inference.py  test_generate_knockoff.py  test_knockoff.py  test_knockoff_aggregation.py  test_leave_one_covariate_in.py  test_leave_one_covariate_out.py  test_loco.py  test_loco_function.py  test_model_x_knockoff.py  test_multi_sample_split.py  test_noise_std.py  test_permutation_feature_importance.py  test_permutation_importance.py  test_permutation_importance_function.py  test_permutation_importance_scikitlearn.py  test_permutation_test.py  test_scenario.py  test_shapley_additive_global_importance.py  test_sklearn_estimators.py  test_standardized_svr.py  (+3 more)
(+269 files in other folders)
