[build-system]
requires = [
    "setuptools             >= 64, < 100", # builder for python packages
    "setuptools_scm[toml]   >= 8,     < 50"  # plugging for getting the version from github
    ]
build-backend = "setuptools.build_meta"

[project]
name = "HiDimStat"
dynamic = ["version"]  # dynamical version extracted from the git version
authors = [  # TODO see if we need more details
    { name = "HiDimStat developers" }  # possibility to add an email address
    ]
maintainers = [
    { name = "Bertrand Thirion", email = "bertrand.thirion@inria.fr" },
]
# Don't forget to have the coherence between the README and the description
description = "High-dimensional statistical inference tools for Python"
keywords = ["statistic", "high dimension", "variable importance"]
readme = "README.rst"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10, < 4"
dependencies = [
    "joblib       >= 1.2.0, < 2",
    "numpy        >= 1.25,  < 3",
    "pandas       >= 2.2,   < 3",
    "scikit-learn >= 1.5,   < 1.9",
    "scipy        >= 1.9.2, < 2",
    "tqdm         >= 4.1.0, < 5",
]

[project.optional-dependencies]
# Requirements necessary for building the documentation
doc = [
    "matplotlib             >= 3.8.0,   < 4",
    "nilearn                >= 0.11.0,  < 1",
    "memory_profiler                       ",
    "numpydoc               >= 1.0.0,   < 2",
    "pydata_sphinx_theme    >= 0.15.1,  < 1",
    "seaborn                >= 0.13,    < 1",
    "sphinxcontrib-bibtex   >= 2.5.0,   < 3",
    "sphinx                 >= 7.0.0,   < 9",
    "sphinx-gallery         >= 0.17.0,  < 1",
    "sphinx-prompt          >= 1.8.0,   < 2",
    "tqdm                   >= 4.1.0,   < 5",
    "sphinx-copybutton",
]
example = ["matplotlib >= 3.1.0,   < 4", "seaborn    >= 0.9,     < 1"]
style = ["ruff  >= 0.14", "codespell >=2.4.0"]

# For running unit and docstring tests
test = [
    "coverage       >= 6.0,     < 8",
    "iniconfig      >= 0.1,     < 3",
    "matplotlib     >= 3.8.0,   < 4",
    "packaging      >= 14.0,    < 100",
    "pytest         >= 8.0, < 10",
    "pytest-cov     >= 5.0, < 8",
    "pytest-durations >= 1.0.0, < 2",
    "pytest-env     >= 1.0.0,   < 2",
    "pytest-html    >= 4.0.0,   < 5",
    "pytest-mpl     >= 0.14,    < 1",
    "pytest-randomly >= 3.3.0, < 5",
    "pytest-reportlog >= 0.2.1, < 2",
    "pytest-timeout >= 2.3.1,   < 3",
    "pytest-xdist[psutil] >= 3.4.0,  < 4",
    "seaborn        >= 0.12,     < 1",
]

[project.urls]
Repository = "https://github.com/mind-inria/hidimstat"
Documentation = "https://github.com/hidimstat/hidimstat.github.io"
Teams = "https://team.inria.fr/mind/"
Issues = "https://github.com/mind-inria/hidimstat/issues"
Discussion = "https://github.com/mind-inria/hidimstat/discussions" # TODO see if we keep it or not

# Configuration of the builder
[tool.setuptools]
package-dir = {"" = "src"} # define the root of the packages as src

# Configuration of static analysis
[tool.codespell]
builtin = "clear,rare"
skip = "./.git,*.bib,./docs/_build"


# file where the version is save
[tool.setuptools_scm]
version_file = "src/hidimstat/_version.py"

# initialization based on the good practice of pytest
# https://docs.pytest.org/en/stable/explanation/goodpractices.html
[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = "src"
testpaths = "test"
addopts = [
    "-rA",                     # short test summary info
    "--import-mode=importlib", # better control of importing packages
    "--showlocals",            # show local variable inn trackbacks
    "--strict-config",         # no warning from parsing pytest configuration file
    "--strict-markers",        # undefine markers will raise an error
    "--capture=no",
    "--color=yes", # Color terminal output
    # pytest-randomly
    # "--randomly-dont-reset-seed", # turn off the rest of the random seed
    # pytest-xdist option
    "-n=auto", # automatically define the number of process
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mpl_image_compare: marks tests to be compared with a baseline image (from pytest-mpl)",
]
# pytest-timeout
timeout = 60           # on individual test should not take more than 10s
session_timeout = 1200 # all the tests should be run in 5 min

[tool.pytest_env]
OPENBLAS_NUM_THREADS = 1
BLIS_NUM_THREADS = 1
MKL_NUM_THREADS = 1
OMP_NUM_THREADS = 1


[tool.ruff]
extend-exclude = ["doc/auto_examples/*", "hidimstat/_version.py"]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "examples/**/*.py",
    "test/**/*.py",
    "tools/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "ARG002",
    "ARG004",
    "ARG005",
    "B007",
    "B008",
    "B017",
    "B018",
    "B028",
    "B904",
    "B905",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D205",
    "D200",
    "D301",
    "D400",
    "D401",
    "D404",
    "E402",
    "E501",
    "E741",
    "ERA001",
    "F401",
    "F841",
    "NPY002",
    "PERF203",
    "PERF401",
    "PD011",
    "PLR2004",
    "PTH100",
    "PTH120",
    "PTH123",
    "PTH207",
    "SIM108",
    "SIM210",
    "RUF005",
    "RUF015",
    "RUF043",
    "RUF059",
    # Avoid linter rules conflicting with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "NPY",
    "PERF",
    "PIE",
    "PD",
    "PGH",
    "PLR",
    "PTH",
    "RUF",
    "SIM",
    "UP",
    "W",
]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 30
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 20
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 8
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 90
